# hugbucket

./: .dockerignore  Dockerfile  HUGGINGFACE_BUCKET_API_SPEC.md  README.md  pyproject.toml
.github/workflows/: docker-build.yml
hugbucket/: __init__.py  bridge.py  config.py  main.py
hugbucket/apps/: __init__.py  ftp.py  s3.py  webdav.py
hugbucket/core/: __init__.py  backend.py  models.py
hugbucket/hub/: client.py
hugbucket/protocols/: __init__.py
hugbucket/protocols/ftp/: __init__.py  filesystem.py  runtime.py  server.py
hugbucket/protocols/s3/: __init__.py  app.py  auth.py  server.py  xml_responses.py
hugbucket/protocols/webdav/: __init__.py  app.py  auth.py  server.py  xml_responses.py
hugbucket/providers/: __init__.py
hugbucket/providers/hf/: __init__.py  backend.py  bridge.py
hugbucket/s3/: app.py  auth.py  server.py  xml_responses.py
hugbucket/xet/: cas_client.py  hasher.py  shard.py  xorb.py
scripts/: cleanup_test_repos.py
src/: main.py
src/hub/: __init__.py
src/s3/: __init__.py  auth.py  server.py  xml_responses.py
src/xet/: __init__.py  chunker.py
tests/: conftest.py  test_boto3.py  test_bridge.py  test_chunker.py  test_ftp_app.py  test_ftp_config.py  test_ftp_filesystem.py  test_ftp_runtime.py  test_ftp_server.py  test_hasher.py  test_integration.py  test_main.py  test_s3_app.py  test_s3_auth.py  test_s3_server.py  test_shard.py  test_webdav_app.py  test_webdav_live.py  test_webdav_server.py  test_xorb.py
tests/contract/: test_protocol_contract.py
