[project]
name = "hugbucket"
version = "0.1.0"
description = "S3-compatible gateway for Hugging Face Storage Buckets (pure Xet implementation)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.9",
    "awscli>=1.44.55",
    "blake3>=1.0",
    "lz4>=4.3",
]

[project.scripts]
hugbucket = "hugbucket.main:main"

[dependency-groups]
dev = [
    "awscli>=1.44.55",
    "boto3>=1.42.65",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-aiohttp>=1.0",
]

[tool.setuptools.package-dir]
hugbucket = "src"

[tool.setuptools]
packages = ["hugbucket", "hugbucket.hub", "hugbucket.s3", "hugbucket.xet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit live HF API (deselect with '-m not integration')",
]
